cmss/main/default/objects/KZNotificationSettings__c/KZNotificationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used for configure notifications about expiring or deleting client zone</description>
    <label>KZ Notification Settings</label>
</CustomObject>