cmss/main/default/objects/KZNotificationSettings__c/fields/DaysBetweenNotificationAndDeletion__c.field-meta.xml
<CustomField>
    <fullName>DaysBetweenNotificationAndDeletion__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Days between client zone cancelation notification and actual deletion of client zone</description>
    <label>Days Between Notification And Deletion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>