cmss/main/default/objects/KZNotificationSettings__c/fields/DaysFromKZCreation__c.field-meta.xml
<CustomField>
    <fullName>DaysFromKZCreation__c</fullName>
    <defaultValue>75</defaultValue>
    <description>First notification will be sent this number of days after the Client Zone is established.</description>
    <label>Days From KZ Creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>