cmss/main/default/objects/KZNotificationSettings__c/fields/DaysFromOppCreation__c.field-meta.xml
<CustomField>
    <fullName>DaysFromOppCreation__c</fullName>
    <defaultValue>&apos;2,7&apos;</defaultValue>
    <description>Days from opportunity creation to wait for sending a notification about an unsigned contract to the client. Can be more values separated by comma.</description>
    <label>Days From Opp Creation</label>
    <length>56</length>
    <type>Text</type>
</CustomField>