cmss/main/default/objects/KZNotificationSettings__c/fields/DaysFromOppCreationOZ__c.field-meta.xml
<CustomField>
    <fullName>DaysFromOppCreationOZ__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Days from opportunity creation to wait for sending a notification about an unsigned contract to the OZ.</description>
    <label>Days From Opp Creation OZ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>