cmss/main/default/objects/KZNotificationSettings__c/fields/SendNotifications__c.field-meta.xml
<CustomField>
    <fullName>SendNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, a valid MailServiceNotification__c record is created, otherwise it is created with an error so the notification does not get sent</description>
    <label>SendNotifications</label>
    <type>Checkbox</type>
</CustomField>